# Bachelorprojekt

./: CMakeLists.txt  ExternalSorting.cpp  GeoLocation.cpp  Rtree.cpp  Rtree.h  RtreeBenchmark.cpp  main.cpp  testData.tsv  testOut.csv
Rtree/: ExternalSorting.cpp  Rtree.cpp  Rtree.h  RtreeBasicGeometry.h  RtreeBuild.cpp  RtreeFileReader.cpp  RtreeFileReader.h  RtreeNode.cpp  RtreeNode.h  RtreeSorter.cpp  RtreeSorter.h
